chore: initialize frontend with Next.js, React, and Tailwind CSS
- Added package.json with project metadata, scripts, and dependencies.
- Included Next.js, React, and Tailwind CSS in dependencies.
- Set up PostCSS configuration for Tailwind CSS.

--- a/.gitignore
+++ b/.gitignore
@@ -161,7 +161,7 @@ next-env.d.ts
 next.config.js
 
 # Node.js
-package-lock.json
-package.json
-postcss.config.mjs
+# package-lock.json
+# package.json
+# postcss.config.mjs
 
