feat: update environment variables, enhance styling, and improve component structure

--- a/.env.template
+++ b/.env.template
@@ -1,6 +1,6 @@
 # Frontend Environment Variables (MindAcuity-Frontend)
 # Copy to .env
 
-VITE_APP_NAME=MindAcuity
-VITE_API_URL=http://localhost:8000
-VITE_WS_URL=ws://localhost:8000/ws
+NEXT_PUBLIC_APP_NAME=MindAcuity
+NEXT_PUBLIC_API_URL=http://localhost:8000
+NEXT_PUBLIC_WS_URL=ws://localhost:8000/ws
